--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "mongodb": "^4.0.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^5.0.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2"
   }
 }
