--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
+    "dcraw": "^1.0.3",
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.17.2",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.6.3",
     "mongodb": "^4.0.1",
+    "mongoose": "^5.13.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.0",
