--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "buffer": "^5.7.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.4",
+    "csv": "^5.5.3",
     "dcraw": "^1.0.3",
     "debug": "~2.6.9",
     "dotenv-safe": "^8.2.0",
@@ -21,6 +22,7 @@
     "mongodb": "^4.0.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "python-shell": "^3.0.0",
